@@ -49,8 +49,11 @@ $conf['right_zoom_offset'] = 30;
 #
 # RRDTool image size of PDFs
 #
-$conf['pdf_width'] = "675";
-$conf['pdf_height'] = "100";
+$conf['pdf_width']        = "675";
+$conf['pdf_height']       = "100";
+$conf['pdf_margin_top']   = "30";
+$conf['pdf_margin_left']  = "17.5";
+$conf['pdf_margin_right'] = "10";
 #
 # Additional options for RRDTool
 #
