@@ -1,7 +1,8 @@
 **pnp-0.6.16 ??/??/2011**
-  * Bugfix:  Fixed single quoted check_multi labels (reported by Matthias Flacke)
+  * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
   * Bugfix:  Append missing slash to perfdata_spool_dir ( Reported by Juergen-Michael Radtke ) 
   * Bugfix:  Fixed jQuery-ui multisite theme
+  * Feature: PDF margins are now adjustable via config.php ( Thomas Witzenrath )
 
 **pnp-0.6.15 09/15/2011**
   * Bugfix:  Fixed Overview link (reported by Stefan Triep)
